--- a/src/app/home/operation/new-credit-note/new-credit-note.component.html
+++ b/src/app/home/operation/new-credit-note/new-credit-note.component.html
@@ -29,7 +29,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <label class="label-header">Invoice Party</label>
-                        <label class="label-subheader">{{invoiceDetails?.SHIPPER_NAME}}</label>
+                        <label class="label-subheader">{{invoiceDetails?.BILL_TO}}</label>
                     </div>
                     <div class="col-md-4">
                         <label class="label-header">Vessel / Voyage</label>
@@ -38,7 +38,7 @@
                     </div>
                     <div class="col-md-4">
                         <label class="label-header">Credit Note To</label>
-                        <label class="label-subheader">{{invoiceDetails?.SHIPPER_NAME}}</label>
+                        <label class="label-subheader">{{invoiceDetails?.BILL_TO}}</label>
                     </div>
 
                 </div>
@@ -66,7 +66,8 @@
                         <div class="label-header">
                             Containers
                         </div>
-                        <div class="label-subheader">20GP X {{invoiceDetails?.CONTAINERS}}</div>
+                        <div class="label-subheader">20GP X {{invoiceDetails?.CONTAINERS.split(',').length -
+                            1}}</div>
                     </div>
                 </div>
             </div>
@@ -77,7 +78,7 @@
             <thead>
                 <tr>
                     <th><label *ngIf="f1?.length > 0" class="checkbox-wrap checkbox-primary me-2">
-                            <input type="checkbox" checked (change)="checkAll($event)" id="chckAll">
+                            <input type="checkbox" (change)="checkAll($event)" id="chckAll">
                             <span class="checkmark" style="top:-8px"></span>
                         </label></th>
                     <th>Charge Name</th>
@@ -99,7 +100,7 @@
             <tbody>
                 <tr class="alert" role="alert" *ngFor="let item of f1;let i = index" [formGroup]="item">
                     <td><label class="checkbox-wrap checkbox-primary me-2">
-                            <input type="checkbox" (change)="checkItem(item,$event)" checked id="chck{{i}}">
+                            <input type="checkbox" (change)="checkItem(item,$event)" id="chck{{i}}">
                             <span class="checkmark"></span>
                         </label></td>
                     <td>{{item.value.CHARGE_NAME}}</td>
