back to list button

--- a/src/app/home/operation/new-credit-note/new-credit-note.component.html
+++ b/src/app/home/operation/new-credit-note/new-credit-note.component.html
@@ -2,6 +2,7 @@
     <h2>New Credit Note</h2>
 </div>
 <div class="container">
+    <a routerLink="/home/operations/credit-note"><i class='bx bx-arrow-back'></i>Back to List</a>
     <div class="col-md-10 mx-auto mb-4">
         <div class="card">
             <div class="card-body" [formGroup]="creditForm">
