--- a/src/app/home/operation/invoice-list2/invoice-list2.component.html
+++ b/src/app/home/operation/invoice-list2/invoice-list2.component.html
@@ -2,6 +2,7 @@
   <h2>Create Invoice</h2>
 </div>
 <div class="container mt-4">
+  <a routerLink="/home/operations/new-invoice"><i class='bx bx-arrow-back'></i>Back to List</a>
   <div class="services">
     <div class="icon-box  text-start">
       <form [formGroup]="listForm">
