--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -28,7 +28,8 @@
                         <!-- <li><a routerLink="operations/invoice-list">{{'Menu.newinvoice'|translate}}</a></li> -->
                         <!-- <li><a class="text-light" routerLink="#">{{'Menu.newinvoice'|translate}}</a></li> -->
                         <li><a routerLink="/home/operations/new-invoice">{{'Menu.newinvoice'|translate}}</a></li>
-                        <li><a routerLink="/home/operations/new-credit-note">Credit Notes</a></li>
+                        <li><a routerLink="/home/operations/credit-note">Credit Notes</a></li>
+                        <li><a routerLink="/home/operations/receipt-list">Receipt</a></li>
 
                     </ul>
                     <ul
