--- a/src/app/home/operation/new-receipt/new-receipt.component.html
+++ b/src/app/home/operation/new-receipt/new-receipt.component.html
@@ -145,6 +145,9 @@
                 </tbody>
             </table>
         </div>
+        <label class="label-header">
+            Balance Amount :
+        </label>
     </div>
     <div class="col-md-2 offset-md-10 text-end mb-4">
         <button class="form-btn w-100">Submit</button>
