--- a/src/app/home/operation/vendor-bills/vendor-bills.component.html
+++ b/src/app/home/operation/vendor-bills/vendor-bills.component.html
@@ -1,18 +1,18 @@
 <div class="section-title">
-    <h2>Credit Note</h2>
+    <h2>Vendor Bills</h2>
 </div>
 <div class="container">
     <form class="mx-5" [formGroup]="filterForm">
         <div class="col-md-6 offset-md-6 text-end">
-            <button class="form-btn-primary" routerLink="/home/operations/new-credit-note"><i
+            <button class="form-btn-primary" routerLink="/home/operations/new-vendor-bill"><i
                     class="fa fa-plus me-1"></i>New
-                Credit Note</button>
+                Vendor Bill</button>
         </div>
         <div class="row">
             <div class="col-md-3">
                 <div class="form-group">
-                    <label class="form-label2">Credit Note No</label>
-                    <input formControlName="CREDIT_NO" type="text" class="form-control2">
+                    <label class="form-label2">Vendor Bill No</label>
+                    <input formControlName="VENDOR_BILL_NO" type="text" class="form-control2">
                 </div>
             </div>
             <div class="col-md-2">
@@ -40,18 +40,30 @@
             <thead>
                 <tr>
                     <th>No</th>
-                    <th>Credit No</th>
-                    <th>Invoice No</th>
-                    <th>Created Date</th>
+                    <th>Vendor Bill No</th>
+                    <th>Vendor Name</th>
+                    <th>BL No</th>
+                    <th>GSTIN</th>
+                    <th>HSN Code</th>
+                    <th>Vendor Bill Date</th>
+                    <th>Charge Name</th>
+                    <th>Currency</th>
+                    <th>Rate</th>
                     <th>Action</th>
                 </tr>
             </thead>
             <tbody>
                 <tr *ngFor="let item of creditList;let i = index">
                     <td>{{i +1}}</td>
-                    <td>{{item.CREDIT_NO}}</td>
-                    <td>{{item.INVOICE_NO}}</td>
-                    <td>{{item.CREATED_DATE | date:'mediumDate'}}</td>
+                    <td>Vendor Bill No</td>
+                    <td>Vendor Name</td>
+                    <td>BL No</td>
+                    <td>GSTIN</td>
+                    <td>HSN Code</td>
+                    <td>Vendor Bill Date</td>
+                    <td>Charge Name</td>
+                    <td>Currency</td>
+                    <td>Rate</td>
                     <td><i (click)="getCreditDetails(item.CREDIT_NO)" class="fa fa-eye pointer"></i>
                     </td>
                 </tr>
