--- a/src/app/home/booking/er-list2/er-list2.component.html
+++ b/src/app/home/booking/er-list2/er-list2.component.html
@@ -39,8 +39,8 @@
             <div [class]="isScroll ? 'force-overflow' : ''">
                 <div class="icon-box icon-box-cyan text-start" *ngFor="let item of erList; let i = index">
                     <div class="row">
-                        <div class="col-md-10">
-                            <h4 class="title"><a href="javascript:void(0)">{{item.REPO_NO}} </a>
+                        <div class="col-md-4">
+                            <h4 class="title mb-0"><a href="javascript:void(0)">{{item.REPO_NO}} </a>
                                 <small *ngIf="item.MODE_OF_TRANSPORT=='Truck'"><img height="20" width="20"
                                         src="assets/img/delivery.png"></small>
                                 <small *ngIf="item.MODE_OF_TRANSPORT=='Rail'"><img height="20" width="20"
@@ -48,22 +48,41 @@
                                 <small *ngIf="item.MODE_OF_TRANSPORT=='Vessel'"><img height="20" width="20"
                                         src="assets/img/cruise.png"></small>
                             </h4>
-                            <p class="description" *ngIf="item.MODE_OF_TRANSPORT!='Vessel'"><img
-                                    src="assets/img/warehouse.png" height="13px" width="13px"> {{item.LOAD_DEPOT}}
-                                <i class='bx bxs-right-arrow-circle mx-2'></i> <img src="assets/img/warehouse.png"
-                                    height="13px" width="13px">
-                                {{item.DISCHARGE_DEPOT}}
+                            <small class="mb-0 text-danger">{{item.CRO_NO}}</small>
+                            <p class="description" *ngIf="item.MODE_OF_TRANSPORT!='Vessel'"><span
+                                    class="bx bxs-ship me-2"></span>{{item.LOAD_DEPOT}} <i
+                                    class='bx bxs-right-arrow-circle mx-2'></i>
+                                <span class="bx bxs-ship me-2"></span>{{item.DISCHARGE_DEPOT}}
+                                <span class="d-block text-success">Created : {{item.CREATED_DATE |
+                                    date:'mediumDate'}}</span>
                             </p>
 
-                            <p class="description" *ngIf="item.MODE_OF_TRANSPORT=='Vessel'"><img
-                                    src="assets/img/warehouse.png" height="13px" width="13px"> {{item.LOAD_DEPOT}}
-                                <i class='bx bxs-right-arrow-circle mx-2'></i> <span class="bx bxs-ship me-2">
-                                </span>{{item.LOAD_PORT}}
-                                <i class='bx bxs-right-arrow-circle mx-2'></i> <span class="bx bxs-ship me-2">
-                                </span>{{item.DISCHARGE_PORT}}
-                                <i class='bx bxs-right-arrow-circle mx-2'></i> <img src="assets/img/warehouse.png"
-                                    height="13px" width="13px"> {{item.DISCHARGE_DEPOT}}
+                            <p class="description" *ngIf="item.MODE_OF_TRANSPORT=='Vessel'"><span
+                                    class="bx bxs-ship me-2"></span>{{item.LOAD_PORT}} <i
+                                    class='bx bxs-right-arrow-circle mx-2'></i>
+                                <span class="bx bxs-ship me-2"></span>{{item.DISCHARGE_PORT}}
+                                <span class="d-block text-success">Created : {{item.CREATED_DATE |
+                                    date:'mediumDate'}}</span>
                             </p>
+                        </div>
+                        <div class="col-md-3">
+                            <p class="description" style="font-weight: 500;"> <span class="bx bxs-box me-2"
+                                    *ngIf="item.EMPTY_CONT_PCKP"></span>{{item.EMPTY_CONT_PCKP}} </p>
+                            <p class="description">
+                                <span><img height="25" width="30" class="me-2" src="assets/img/container.png" />20GP x
+                                    {{item.NO_OF_CONTAINER}}</span>
+                            </p>
+                        </div>
+                        <div class="col-md-3">
+                            <p class="description" style="font-weight: 500;"><i class="bx bxs-ship me-2"></i> <span
+                                    class="text-info">{{item.VESSEL_NAME}} -
+                                    {{item.VOYAGE_NO}}</span>
+                            </p>
+                            <p class="description"><i class='bx bx-history me-2'></i> <span class="fw-bold">ETA :</span>
+                                {{item.ETA
+                                |
+                                date:'mediumDate'}} <span class="fw-bold">ETD : </span>{{item.ETD |
+                                date:'mediumDate'}}</p>
                         </div>
                         <div class="col-md-2 text-end" *ngIf="!item.CRO_NO">
                             <button (click)="openCROModal(item.REPO_NO)" class="form-btn btn-sm rounded-pill">CREATE
@@ -75,6 +94,9 @@
                         <div class="col-md-2 text-end" *ngIf="item.CRO_NO">
                             <button (click)="getERCRODetails(item.REPO_NO)" class="form-btn btn-sm rounded-pill">View
                                 PDF</button>
+                            <p class="description">
+                                Validity : <span class="text-danger">{{item.CRO_VALIDITY_DATE |
+                                    date:'mediumDate'}}</span></p>
                         </div>
                     </div>
                 </div>
