--- a/src/app/home/operation/new-invoice2/new-invoice2.component.html
+++ b/src/app/home/operation/new-invoice2/new-invoice2.component.html
@@ -41,7 +41,7 @@
           <th width="10%">Type</th>
           <th width="10%">Bill To</th>
           <th width="10%">BL No</th>
-          <th width="10%">Shipper Name</th>
+          <th width="10%">Shipper</th>
           <th width="20%">Bill From</th>
           <th width="15%">Status</th>
           <th width="14%">Action</th>
