--- a/src/app/home/operation/invoice-list2/invoice-list2.component.html
+++ b/src/app/home/operation/invoice-list2/invoice-list2.component.html
@@ -13,7 +13,7 @@
               <label *ngIf="POL" class="label-subheader"><span class="fw-bold">Shipper/CHA</span> :
                 {{f.SHIPPER_NAME.value}}</label>
               <label *ngIf="!POL" class="label-subheader"><span class="fw-bold">Consignee/CHA </span> :
-                {{f.SHIPPER_NAME.value}}</label>
+                {{f.CONSIGNEE_NAME.value}}</label>
             </div>
           </div>
           <div class="col-md-4">
@@ -39,9 +39,9 @@
           </div>
           <div class="col-md-3">
             <div class="form-group">
-              <ng-select formControlName="BILL_TO">
+              <ng-select (change)="getAddressForCx($event)" formControlName="BILL_TO">
                 <ng-option disabled value="">--Select--</ng-option>
-                <ng-option *ngFor="let item of BillFromList" value="{{item.CODE}}">{{item.CODE}}</ng-option>
+                <ng-option *ngFor="let item of BillToList" value="{{item.CODE}}">{{item.CODE_DESC}}</ng-option>
               </ng-select>
               <label class="form-label-ddl">Bill To<span class="text-danger"> *</span></label>
               <small *ngIf="submitted && f.BILL_TO.errors" class="text-danger">Bill To is required</small>
@@ -72,7 +72,7 @@
                             </tr>
                           </thead>
                           <tbody>
-                            <tr *ngFor="let item of AddressList let i = index">
+                            <tr *ngFor="let item of AddressList1 let i = index">
                               <td width="1%"><input
                                   (click)="getAddress(item.ADDRESS,item.BRANCH_ID,item.IS_TAX_APPLICABLE,$event,item.BRANCH_CODE)"
                                   type="radio" name="radio"></td>
